[gd_scene load_steps=14 format=3 uid="uid://bfh511tifahf8"]

[ext_resource type="FontFile" uid="uid://d2wn54tmrjvkh" path="res://Assets/Fonts/Gupter-Bold.ttf" id="1_7edds"]
[ext_resource type="Script" path="res://Scripts/other/main_settings_menu.gd" id="2_6eneb"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1_7edds")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("1_7edds")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("1_7edds")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="8"]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color(0.415686, 0.415686, 0.415686, 1)
border_width_right = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id="9"]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color(0.886275, 0.298039, 0.0117647, 1)
border_blend = true

[sub_resource type="Theme" id="11"]
default_font = SubResource("10")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_color_disabled = Color(0.901961, 0.901961, 0.901961, 0.2)
Button/colors/font_color_hover = Color(1, 0.8, 0.109804, 1)
Button/colors/font_color_pressed = Color(0.886275, 0.298039, 0.0117647, 1)
Button/constants/h_separation = 2
Button/fonts/font = SubResource("1")
Button/styles/disabled = SubResource("2")
Button/styles/focus = SubResource("3")
Button/styles/hover = SubResource("4")
Button/styles/normal = SubResource("5")
Button/styles/pressed = SubResource("6")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_color_shadow = Color(0, 0, 0, 0)
Label/colors/font_outline_modulate = Color(1, 1, 1, 1)
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource("7")
Label/styles/normal = null
TabBar/colors/font_color_bg = Color(0.69, 0.69, 0.69, 1)
TabBar/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
TabBar/colors/font_color_fg = Color(0.94, 0.94, 0.94, 1)
TabBar/constants/h_separation = 4
TabBar/constants/label_valign_bg = 2
TabBar/constants/label_valign_fg = 0
TabBar/constants/top_margin = 24
TabBar/fonts/font = SubResource("10")
TabBar/icons/close = null
TabBar/icons/decrement = null
TabBar/icons/decrement_highlight = null
TabBar/icons/increment = null
TabBar/icons/increment_highlight = null
TabBar/styles/button = null
TabBar/styles/button_pressed = null
TabBar/styles/panel = null
TabBar/styles/tab_bg = null
TabBar/styles/tab_disabled = null
TabBar/styles/tab_fg = null
TabContainer/colors/font_color_bg = Color(1, 1, 1, 1)
TabContainer/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
TabContainer/colors/font_color_fg = Color(1, 1, 1, 1)
TabContainer/constants/h_separation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = SubResource("10")
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = SubResource("8")
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource("9")

[node name="MainSettingsMenu" type="Popup"]
size = Vector2i(1000, 700)
visible = true
theme = SubResource("11")
script = ExtResource("2_6eneb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.415686, 0.415686, 0.415686, 1)

[node name="SettingTabs" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
current_tab = 1

[node name="Video" type="TabBar" parent="SettingTabs"]
visible = false
layout_mode = 2
tab_close_display_policy = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Video"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingTabs/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 20
columns = 2

[node name="ScreenMode" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Display Mode"

[node name="DisplayOptions" type="OptionButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Vsync" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 8

[node name="DisplayFps" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display FPS"

[node name="DisplayFpsBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 8

[node name="MaxFps" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Max FPS"

[node name="MaxFpsOption" type="HBoxContainer" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10

[node name="MaxFpsVal" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings/MaxFpsOption"]
layout_mode = 2
text = "max"

[node name="MaxFpsSlider" type="HSlider" parent="SettingTabs/Video/MarginContainer/VideoSettings/MaxFpsOption"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0
rounded = true

[node name="DisplayFps2" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Bloom"

[node name="BloomBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Brightness" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Input" type="TabBar" parent="SettingTabs"]
layout_mode = 2
tab_close_display_policy = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Input"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingTabs/Input/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 20
columns = 2

[node name="InputOne" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input One"

[node name="InputOneOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 0
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputTwo" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Two"

[node name="InputTwoOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 1
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputThree" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Three"

[node name="InputThreeOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 2
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputFour" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Four"

[node name="InputFourOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 3
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputFive" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Five"

[node name="InputFiveOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 4
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputSix" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Six"

[node name="InputSixOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 5
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputSeven" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Seven"

[node name="InputSevenOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 6
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputEight" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Eight"

[node name="InputEightOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 7
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="InputNine" type="Label" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Input Nine"

[node name="InputNineOptions" type="OptionButton" parent="SettingTabs/Input/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 19
selected = 8
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 0
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "Left Click"
popup/item_9/id = 9
popup/item_10/text = "Right Click"
popup/item_10/id = 10
popup/item_11/text = "Middle Click"
popup/item_11/id = 11
popup/item_12/text = "Space Bar"
popup/item_12/id = 12
popup/item_13/text = "W"
popup/item_13/id = 13
popup/item_14/text = "A"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "D"
popup/item_16/id = 16
popup/item_17/text = "Q"
popup/item_17/id = 17
popup/item_18/text = "E"
popup/item_18/id = 18

[node name="Audio" type="TabBar" parent="SettingTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="SettingTabs/Audio"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="SettingTabs/Audio/MarginContainer2"]
layout_mode = 2
theme_override_constants/v_separation = 20
columns = 2

[node name="MasterVol" type="Label" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="MusicVol" type="Label" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="SfxVol" type="Label" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="ShipVoiceVol" type="Label" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
layout_mode = 2
text = "Ship Voice Volume"

[node name="ShipVoiceSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="GamePlay" type="TabBar" parent="SettingTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="SettingTabs/GamePlay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GameplaySettings" type="GridContainer" parent="SettingTabs/GamePlay/MarginContainer3"]
layout_mode = 2
theme_override_constants/v_separation = 20
columns = 2

[node name="Fov" type="Label" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings"]
layout_mode = 2
size_flags_vertical = 1
text = "FOV"

[node name="FovOption" type="HBoxContainer" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10

[node name="FovAmount" type="Label" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings/FovOption"]
layout_mode = 2
text = "70"

[node name="FovSlider" type="HSlider" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings/FovOption"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
value = 70.0
rounded = true

[node name="MouseSens" type="Label" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings"]
layout_mode = 2
text = "Mouse Sensitvity"

[node name="MouseSensOption" type="HBoxContainer" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10

[node name="MouseSensAmount" type="Label" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings/MouseSensOption"]
layout_mode = 2
text = ".1"

[node name="MouseSlider" type="HSlider" parent="SettingTabs/GamePlay/MarginContainer3/GameplaySettings/MouseSensOption"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 1.0
step = 0.01
value = 0.1

[connection signal="item_selected" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayOptions" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/VsyncBtn" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayFpsBtn" to="." method="_on_DisplayFpsBtn_toggled"]
[connection signal="value_changed" from="SettingTabs/Video/MarginContainer/VideoSettings/MaxFpsOption/MaxFpsSlider" to="." method="_on_MaxFpsSlider_value_changed"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/BloomBtn" to="." method="_on_BloomBtn_toggled"]
[connection signal="value_changed" from="SettingTabs/Video/MarginContainer/VideoSettings/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer2/AudioSettings/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer2/AudioSettings/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer2/AudioSettings/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer2/AudioSettings/ShipVoiceSlider" to="." method="_on_ship_voice_slider_value_changed"]
[connection signal="value_changed" from="SettingTabs/GamePlay/MarginContainer3/GameplaySettings/FovOption/FovSlider" to="." method="_on_FovSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/GamePlay/MarginContainer3/GameplaySettings/MouseSensOption/MouseSlider" to="." method="_on_MouseSlider_value_changed"]
